--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Uvais Ahmad Sabir Ansari CnINJAS",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
 }
