--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "THis is demo for add Major Proj",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Uvais Ahmad Sabir Ansari CnINJAS",
