--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "THis is demo for add Major Proj",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Uvais Ahmad Sabir Ansari CnINJAS",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1"
   }
 }
