--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Uvais Ahmad Sabir Ansari CnINJAS",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
